# termin-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  bot.py  cli.py  pyproject.toml
.github/workflows/: ci.yml
termin_bot/: appointment_handler.py  commands.py  common.py  domain.py  exceptions.py  message.py  model.py  models.py  scraper.py  util.py
test/: __init__.py  test_message.py  test_model.py  test_scraper.py  utils.py
test/fixtures/: appointment_termin.html  appointment_termin_next.html  appontment_termin.html  appontment_termin_next.html  bookable_appointment.html  dienstleistungen.html
