[tool.poetry]
name = "termin-bot"
version = "0.1.0"
description = ""
authors = ["Malachi Soord <inverse.chi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.7"
environs = "^9.3.4"
pony = "^0.7.14"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
