[tool.poetry]
name = "termin-bot"
version = "0.1.0"
description = ""
authors = ["Malachi Soord <inverse.chi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.7"
environs = "^9.3.4"
pony = "^0.7.14"
click = "^8.0.3"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
responses = "^0.15.0"
pytest-socket = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
